crates/nash-can/src/snapshots/nash_can__pattern__tests__ctor_no_args.snap
---
source: crates/nash-can/src/pattern.rs
description: Nothing
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: Constructor(
            PatternCtor {
                reference: ConstructorName {
                    home: ModuleName {
                        package: None,
                        name: "Maybe",
                    },
                    union: "Maybe",
                    name: "Nothing",
                },
                index: 1,
                arguments: [],
                options: Normal,
                alternatives: 2,
            },
        ),
    },
    {},
)
