crates/nash-can/src/snapshots/nash_can__pattern__tests__ctor_wrong_arity.snap
---
source: crates/nash-can/src/pattern.rs
description: Just x y
---
[
    BadArity {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        context: PatternArity,
        name: "Just",
        expected: 1,
        actual: 2,
    },
]
