crates/nash-can/src/snapshots/nash_can__pattern__tests__duplicate_across_sibling_patterns.snap
---
source: crates/nash-can/src/pattern.rs
description: "verify_all over `x` and `x`"
---
[
    DuplicatePattern {
        context: LambdaArgs,
        name: "x",
        first: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 2,
            },
        },
        second: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 2,
            },
        },
    },
]
