crates/nash-can/src/snapshots/nash_can__pattern__tests__duplicate_vars.snap
---
source: crates/nash-can/src/pattern.rs
description: "( x, x )"
---
[
    DuplicatePattern {
        context: CaseBranch,
        name: "x",
        first: Region {
            start: Position {
                line: 1,
                column: 3,
            },
            end: Position {
                line: 1,
                column: 4,
            },
        },
        second: Region {
            start: Position {
                line: 1,
                column: 6,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
    },
]
