crates/nash-can/src/snapshots/nash_can__pattern__tests__tuple_four.snap
---
source: crates/nash-can/src/pattern.rs
description: "( a, b, c, d )"
---
[
    TupleLargerThanThree {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 15,
            },
        },
    },
]
